# rrc

./: README.md  robot.json  robot.urdf
client/: .eslintrc.js  index.html  main.css  package-lock.json  package.json  tsconfig.json
client/src/: connection.ts  geometry.ts  joint.ts  link.ts  main.ts  message.ts  renderer.ts  robot.ts  simulation.ts  urdf.ts  util.ts  websocket.ts
controls/: Cargo.toml
controls/src/: ik.rs  lib.rs  main.rs  pid.rs  robot.rs  server.rs  simulation.rs  specs.rs
