[package]
name = "controls"
version = "0.1.0"
edition = "2021"
authors = ["Ivo Velthoven <lyr-7d1h@pm.me>"]

[dependencies]
anyhow = "1.0.79"
env_logger = "0.11.1"
futures-util = "0.3.30"
log = "0.4.20"
rapier3d = { version = "0.18.0", features = ["simd-stable", "serde-serialize"] }
serde = "1.0.196"
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
