[package]
name = "controls"
version = "0.1.0"
edition = "2021"
authors = ["Ivo Velthoven <lyr-7d1h@pm.me>"]

[dependencies]
anyhow = "1.0.79"
crossbeam = "0.8.4"
env_logger = "0.11.1"
futures-util = "0.3.30"
k = "0.31.0"
log = "0.4.20"
nalgebra = "0.32.3"
nphysics3d = "0.24.0"
serde = {version = "1.0.196", features=["derive"]}
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
urdf-rs = "0.8.0"
